--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "concurrently": "^6.2.0",
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
